...
//                        outputNames = viewModel.getOutputNames()
                        print(urls)
                        print("end")
                    }
                })
                {
                    Text("Open Output Files")
                }
        }
        VStack(alignment: .leading) {
            ForEach(urls,id: \.self) { file in
                Text(file.path)
                QLImage(url: file)
...
